--- a/dos/Dockerfile.rhel
+++ b/dos/Dockerfile.rhel
@@ -69,8 +69,9 @@ RUN if [ "$DISTRO" = "centos" ] && [ "$OS_VERSION" = "7" ] && { [ "$ARCH" = "aar
         yum -y install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin; \
     else \
         echo ">>> [Standard] Applying Aliyun Docker Mirror..." && \
-        yum-config-manager --add-repo https://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo && \
-        sed -i 's+download.docker.com+mirrors.aliyun.com/docker-ce+' /etc/yum.repos.d/docker-ce.repo && \
+        echo ">>> 使用腾讯云 Docker CE 镜像源..." && \
+        yum-config-manager --add-repo https://mirrors.cloud.tencent.com/docker-ce/linux/centos/docker-ce.repo && \
+        sed -i 's|download.docker.com|mirrors.cloud.tencent.com/docker-ce|g' /etc/yum.repos.d/docker-ce.repo && \
         yum makecache fast && \
         yum -y install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin; \
     fi && \
