--- a/vms/config.json
+++ b/vms/config.json
@@ -109,7 +109,7 @@
     ]
   },
   "centos7_x86_64": {
-    "enable": true,
+    "enable": false,
     "count": 5,
     "ports": {
       "vm-1": [
@@ -172,6 +172,51 @@
   },
   "ubuntu2004_amd64": {
     "enable": false,
+    "count": 5,
+    "ports": {
+      "vm-6": [
+        "3311:3306",
+        "20020:10000",
+        "20021:18080",
+        "20022:27001",
+        "6384:6379"
+      ],
+      "vm-7": [
+        "3312:3306",
+        "20024:10000",
+        "20025:18080",
+        "20026:27001",
+        "6385:6379"
+      ],
+      "vm-8": [
+        "3313:3306",
+        "20028:10000",
+        "20029:18080",
+        "20030:27001",
+        "6386:6379"
+      ],
+      "vm-9": [
+        "3314:3306",
+        "6387:6379",
+        "20032:10000",
+        "20033:18080",
+        "20034:27001"
+      ],
+      "vm-10": [
+        "3315:3306",
+        "6388:6379",
+        "20036:10000",
+        "20037:18080",
+        "20038:27001"
+      ]
+    },
+    "volumes": [
+      "/sys/fs/cgroup:/sys/fs/cgroup:rw",
+      "~/workspace/shared:/opt/shared"
+    ]
+  },
+  "ubuntu2404_amd64": {
+    "enable": true,
     "count": 5,
     "ports": {
       "vm-6": [
