--- a/vms/templates.yaml
+++ b/vms/templates.yaml
@@ -55,6 +55,20 @@ x-templates:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
       - ~/workspace/shared:/opt/shared
 
+  agent_ubuntu2404_amd64: &agent_ubuntu2404_amd64
+    image: finnley/ubuntu2404:amd64
+    privileged: true
+    stdin_open: true
+    tty: true
+    extra_hosts:
+      - "docker-registry:192.168.18.20"
+    cap_add:
+      - ALL
+    working_dir: /opt
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - ~/workspace/shared:/opt/shared
+
   agent_ubuntu2204_arm64: &agent_ubuntu2204_arm64
     image: finnley/ubuntu22.04:arm64
     privileged: true
