--- a/dos/Makefile
+++ b/dos/Makefile
@@ -60,6 +60,7 @@ help:
 	@echo "   make build-el8         -> 构建 CentOS 8 镜像"
 	@echo "   make build-rocky8      -> 构建 Rocky Linux 8 镜像"
 	@echo "   make build-ubuntu-focal-> 构建 Ubuntu 20.04 镜像"
+	@echo "   make build-ubuntu-noble-> 构建 Ubuntu 24.04 镜像"
 	@echo ""
 	@echo " [2. 沙盒调试指令 (Playground)]"
 	@echo "   make playground-el7    -> 启动 CentOS 7 测试容器 (后台运行)"
@@ -72,6 +73,7 @@ help:
 	@echo "   make push-el7          -> 推送 CentOS 7 到仓库 $(REGISTRY)"
 	@echo "   make push-rocky8       -> 推送 Rocky 8 到仓库 $(REGISTRY)"
 	@echo "   make push-ubuntu-focal -> 推送 Ubuntu 到仓库 $(REGISTRY)"
+	@echo "   make push-ubuntu-noble -> 推送 Ubuntu 到仓库 $(REGISTRY)"
 	@echo ""
 	@echo " [高级用法示例]"
 	@echo "   # 在 M1/M2 Mac (arm64) 上强制构建 x86 镜像:"
