--- a/dos/Dockerfile.ubuntu-noble
+++ b/dos/Dockerfile.ubuntu-noble
@@ -45,6 +45,7 @@ RUN apt-get update -qq && \
         iputils-ping dbus dbus-user-session && \
     # 生成中文 locale
     locale-gen en_US.UTF-8 zh_CN.UTF-8 && \
+    sed -i 's/#DNS=/DNS=114.114.114.114/' /etc/systemd/resolved.conf && \
     # 设置 root 密码 + 允许 root ssh 密码登录
     echo "root:${ROOT_PASSWORD}" | chpasswd && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
@@ -83,7 +84,8 @@ RUN mkdir -p /etc/docker && \
     "https://docker.mirrors.ustc.edu.cn",
     "https://registry.docker-cn.com"
   ],
-  "exec-opts": ["native.cgroupdriver=systemd"]
+  "exec-opts": ["native.cgroupdriver=systemd"],
+  "dns": ["114.114.114.114"]
 }
 EOF
 
