--- a/dos/Dockerfile.ubuntu-noble
+++ b/dos/Dockerfile.ubuntu-noble
@@ -83,7 +83,7 @@ RUN mkdir -p /etc/docker && \
     "https://docker.mirrors.ustc.edu.cn",
     "https://registry.docker-cn.com"
   ],
-  "exec-opts": ["native.cgroupdriver=systemd"],
+  "exec-opts": ["native.cgroupdriver=systemd"]
 }
 EOF
 
